--- a/templates/User/editprofile.html
+++ b/templates/User/editprofile.html
@@ -1,4 +1,4 @@
-{% extends 'master.html' %}
+{% extends 'user/master.html' %}
     {% block content %}
     
     <section class="bookingform py-5">
@@ -11,7 +11,7 @@
                         <h5>Please Enter</h5>
                     </div>
                     <div class="modal-body">
-                        <form action="/update/{{current_user.id}}" method="POST">
+                        <form action="/user/update/{{current_user.id}}" method="POST">
                             <div class="form-group">
                                 <label for="recipient-name" class="col-form-label">First Name</label>
                                 <input type="text" class="form-control" placeholder="First Name" value="{{current_user.fname}}" name="fname" id="recipient-fname" required="">
@@ -30,7 +30,7 @@
                             </div>
                             <div class="sub-w3l">
                                 <div class="sub-agile" style="color: white;">
-                                    <label for="password2" class="col-form-label"><a href="/editpass">Change password</a></label>
+                                    <label for="password2" class="col-form-label"><a href="/user/editpass">Change password</a></label>
                                 </div>
                             </div> <br>
                             <div class="right-w3l">
