--- a/templates/User/master.html
+++ b/templates/User/master.html
@@ -134,7 +134,7 @@
 								<a class="dropdown-item text-left" href="/user/register">
 									<i class="fa fa-user"></i> &nbsp 
 									<b> Register To Ride</a></b>
-								<a class="dropdown-item text-left" href="/driver/home">
+								<a class="dropdown-item text-left" href="/driver/register">
 									<i class="fa fa-user"></i> &nbsp
 									<b> Register To Drive</a></b>
 							</span>
