--- a/templates/User/about.html
+++ b/templates/User/about.html
@@ -9,7 +9,7 @@
             <div class="row service-grids">
                 <div class="col-lg-4">
                     <h3 class="text-capitalize mb-3">We have a range of vehicles</h3>
-                    <p class="mb-3">Vestibulum et augue eu nibh tincidunt pretium vitae eget purus. Pellentesque necist urna eleifend, semper eros sed, sollicitudin justo. Nam finibus sollicitudin enim, nec blan ditmi laoreet sed. Morbi auctor purus ac ligula aliquetis vestibulum. Quisque vitae sollicitu dinet augue eu pretium vitae.</p>
+                    <p class="mb-3">Starting from a small <b>hatchback to the Mercedes</b>, we got everything covered for your amazing cab booking experience. With fares starting from as low as <b>Rs. 8/km</b>, it won't shake your budget too.</p>
                 </div>
                 <div class="col-lg-2 col-6">
                     <img src="images/1.png" alt="" class="img-fluid" />
@@ -23,11 +23,11 @@
                 </div>
                 <div class="col-lg-4">
                     <h4 class="text-capitalize"><i class="fas fa-taxi clr1"></i>Luxury Cars</h4>
-                    <p class="mb-4"> Vestibulum et augue eunibh metus diam.</p>
-                    <h4 class="text-capitalize"><i class="fas fa-bus clr2"></i>Luxury Vans</h4>
-                    <p class="mb-4"> Vestibulum et augue eunibh metus diam.</p>
-                    <h4 class="text-capitalize"><i class="fas fa-car clr3"></i>Luxury Elite</h4>
-                    <p class="mb-4"> Vestibulum et augue eunibh metus diam laoreet.</p>
+                    <p class="mb-4"> From Mercedes to BMW. </p>
+                    <h4 class="text-capitalize"><i class="fas fa-bus clr2"></i>Hatchback cars</h4>
+                    <p class="mb-4"> Perfect for your small trips.</p>
+                    <h4 class="text-capitalize"><i class="fas fa-car clr3"></i>SUV for your family trips.</h4>
+                    <p class="mb-4"> 7-seater for your group trip.</p>
                 </div>
             </div>
         </div>
