--- a/templates/User/master.html
+++ b/templates/User/master.html
@@ -114,11 +114,11 @@
 							</a>
 							<span class="dropdown-menu" aria-labelledby="navbarDropdown">
 								<a class="dropdown-item text-left" href="/user/login">
-									<i class="fa fa-lock"></i> &nbsp 
-									<b> Sign In To Ride</a></b>
+									<i class="fa fa-user"></i> &nbsp 
+									<b> To Ride</a></b>
 								<a class="dropdown-item text-left" href="/driver/login">
-									<i class="fa fa-lock"></i> &nbsp
-									<b> Sign In To Drive</a></b>
+									<i class="fa fa-car"></i> &nbsp
+									<b> To Drive</a></b>
 							</span>
 						</span>
 					</div>
@@ -131,12 +131,12 @@
 								<i class="fa fa-angle-down" style="color: black;" aria-hidden="true"></i>
 							</a>
 							<span class="dropdown-menu" aria-labelledby="navbarDropdown">
-								<a class="dropdown-item text-left" href="/user/register">
+								<a style="display: inline-block" class="dropdown-item text-left" href="/user/register1">
 									<i class="fa fa-user"></i> &nbsp 
-									<b> Register To Ride</a></b>
-								<a class="dropdown-item text-left" href="/driver/register">
-									<i class="fa fa-user"></i> &nbsp
-									<b> Register To Drive</a></b>
+									<b> To Ride</a></b>
+								<a style="display: inline-block" class="dropdown-item text-left" href="/driver/register">
+									<i class="fa fa-car"></i> &nbsp
+									<b> To Drive</a></b>
 							</span>
 						</span>
 					</div>
@@ -199,7 +199,7 @@
 			<div class="col-lg-3 col-sm-6 mb-lg-0 mb-5 footer-grid-agileits-w3ls1 text-left">
 				<h3 class="mb-sm-5 mb-4">Locate Us</h3>	
 				<ul class="w3ls-footer-bottom-list">
-					<li> <span class="fas fa-map-marker"></span> 402 Shakti-Suman Flats,<span> Gujarat, India </span></li>
+					<li> <span class="fas fa-map-marker"></span> 402, Shakti-Suman Flats,<span> Gujarat, India </span></li>
 					<li> <span class="fas fa-envelope"></span> <a href="mailto:name@example.com"> info@cammy.com</a> </li>
 					<li> <span class="fas fa-phone"></span> (+91)8488886344 </li>
 					<li> <span class="fas fa-globe"></span> <a href="#"> www.cammy.com</a> </li>
