--- a/templates/flask_user/login.html
+++ b/templates/flask_user/login.html
@@ -22,8 +22,7 @@
             </div>
             <h1 class="heading text-capitalize text-center">Sign In to your account</h1>
             <h5 class="heading mb-5 text-center">Cammy Cab</h5>
-            
-            <div class="row  justify-content-center" role="document">
+            <div class="row justify-content-center" role="document">
                 <div class="col-lg-6">
                     <div class="modal-header text-center">
                         <h5 class="w-100">Please Enter Your Credentials</h5>
@@ -40,13 +39,16 @@
                             </div>
                             <div class="row sub-w3l my-3">
                                 <div class="col sub-agile">
-                                    <input type="checkbox" name="remember" id="brand1" value="True">
-                                    <label for="brand1" class="text-white">
-                                        <span></span>Remember me</label>
-                                </div>
-                                <div class="col sub-agile">
                                     <a href="#" style="color: white;">Forgot Password?</a>
                                 </div>
+                                <!-- <div class="col sub-agile">
+                                    <input type="checkbox" name="remember" id="brand1" value="True">
+                                    <label for="brand1" class="text-white">
+                                        <span></span>Remember me?</label>
+                                </div>
+                                <div class="col forgot-w3l text-right">
+                                    <a href="#" class="text-white">Forgot Password?</a>
+                                </div> -->
                             </div> 
                             <div class="right-w3l">
                                 <input type="submit" class="form-control" value="Sign In">
