--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -5494,8 +5494,8 @@ button.close {
   justify-content: space-between;
   padding: 1rem;
   border-bottom: 1px solid #e9ecef;
-  border-top-left-radius: 0.3rem;
-  border-top-right-radius: 0.3rem;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
 }
 
 .modal-header .close {
@@ -5514,6 +5514,7 @@ button.close {
   -ms-flex: 1 1 auto;
   flex: 1 1 auto;
   padding: 1rem;
+  border-radius: 0px 0px 15px 15px
 }
 
 .modal-footer {
