--- a/templates/Driver/editpass.html
+++ b/templates/Driver/editpass.html
@@ -1,4 +1,4 @@
-{% extends 'user/master.html' %}
+{% extends 'driver/master.html' %}
     {% block content %}
     
     <section class="bookingform py-5">
@@ -14,8 +14,8 @@
                 <div class="col-lg-6">
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb justify-content-center">
-                        <li class="breadcrumb-item" aria-current="page"><a href="/"> Home </a></li>
-                        <li class="breadcrumb-item" aria-current="page"><a href="/user/editprofile">Edit User Profile</a></li>
+                        <li class="breadcrumb-item" aria-current="page"><a href="/driver/home"> Home </a></li>
+                        <li class="breadcrumb-item" aria-current="page"><a href="/driver/editprofile">Edit Driver Profile</a></li>
                         <li class="breadcrumb-item active" aria-current="page">Update Password</li>
                         </ol>
                     </nav>
@@ -29,7 +29,14 @@
                         <h5>Please Enter</h5>
                     </div>
                     <div class="modal-body">
-                        <form action="/user/updatepass/{{current_user.id}}" method="POST">
+                        {% with messages = get_flashed_messages() %}
+                            {% if messages %}
+                                <div class="notification is-danger text-light">
+                                    {{ messages[0] }}. <br><br>
+                                </div>
+                            {% endif %}
+                        {% endwith %}
+                        <form action="/driver/updatepass/{{current_user.id}}" method="POST">
                             <div class="form-group">
                                 <label for="password1" class="col-form-label">Old Password</label>
                                 <input type="password" class="form-control" placeholder="Old Password" name="opassword" id="password1" required="">
