--- a/templates/Driver/editprofile.html
+++ b/templates/Driver/editprofile.html
@@ -1,4 +1,4 @@
-{% extends 'user/master.html' %}
+{% extends 'driver/master.html' %}
     {% block content %}
     
     <section class="bookingform py-5">
@@ -7,8 +7,8 @@
                 <div class="col-lg-6">
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb justify-content-center">
-                        <li class="breadcrumb-item" aria-current="page"><a href="/"> Home </a></li>
-                        <li class="breadcrumb-item active" aria-current="page">Edit User Profile</li>
+                        <li class="breadcrumb-item" aria-current="page"><a href="/driver/home"> Home </a></li>
+                        <li class="breadcrumb-item active" aria-current="page">Edit Driver Profile</li>
                         </ol>
                     </nav>
                 </div>
@@ -21,7 +21,7 @@
                         <h5>Please Enter</h5>
                     </div>
                     <div class="modal-body">
-                        <form action="/user/update/{{current_user.id}}" method="POST">
+                        <form action="/driver/update/{{current_user.id}}" method="POST">
                             <div class="form-group">
                                 <label for="recipient-name" class="col-form-label">First Name</label>
                                 <input type="text" class="form-control" placeholder="First Name" value="{{current_user.fname}}" name="fname" id="recipient-fname" required="">
@@ -32,15 +32,15 @@
                             </div>
                             <div class="form-group">
                                 <label for="recipient-email" class="col-form-label">Email</label>
-                                <input disabled type="email" class="form-control" placeholder="Email" value="{{current_user.rider_email}}" name="email" id="recipient-email" required="">
+                                <input disabled type="email" class="form-control" placeholder="Email" value="{{current_user.driver_email}}" name="email" id="recipient-email" required="">
                             </div>
                             <div class="form-group">
                                 <label for="recipient-email" class="col-form-label">Contact</label>
-                                <input type="tel" class="form-control" pattern="[0-9]{10}" placeholder="Contact" value="{{current_user.rider_contact}}" name="contact" id="recipient-contact" required oninvalid="this.setCustomValidity('Enter 10 digit number')" oninput="this.setCustomValidity('')">
+                                <input type="tel" class="form-control" pattern="[0-9]{10}" placeholder="Contact" value="{{current_user.driver_contact}}" name="contact" id="recipient-contact" required oninvalid="this.setCustomValidity('Enter 10 digit number')" oninput="this.setCustomValidity('')">
                             </div>
                             <div class="sub-w3l">
                                 <div class="sub-agile" style="color: white;">
-                                    <label for="password2" class="col-form-label"><a href="/user/editpass">Change password</a></label>
+                                    <label for="password2" class="col-form-label"><a href="/driver/editpass">Change password</a></label>
                                 </div>
                             </div> <br>
                             <div class="right-w3l">
