--- a/templates/Driver/login.html
+++ b/templates/Driver/login.html
@@ -3,21 +3,31 @@
 
     <section class="bookingform py-5">
         <div class="container py-md-5 py-3">
+            {% with messages = get_flashed_messages() %}
+                {% if messages %}
+                    <div class="alert alert-danger text-center" role="alert">
+                        {{ messages[0] }}.
+                    </div>
+                {% endif %}
+            {% endwith %}
+            <div class="row justify-content-center" role="document">
+                <div class="col-lg-6">
+                    <nav aria-label="breadcrumb">
+                        <ol class="breadcrumb justify-content-center">
+                        <li class="breadcrumb-item" aria-current="page"><a href="/"> Home </a></li>
+                        <li class="breadcrumb-item active" aria-current="page">Driver Login</li>
+                        </ol>
+                    </nav>
+                 </div>
+            </div>
             <h1 class="heading text-capitalize text-center">Sign In to your account</h1>
             <h5 class="heading mb-5 text-center">Cammy Cab</h5>
             <div class="row justify-content-center" role="document">
-                <div class="">
-                    <div class="modal-header">
-                        <h5 class="">Please Enter Your Credentials</h5>
+                <div class="col-lg-6">
+                    <div class="modal-header text-center">
+                        <h5 class="w-100">Please Enter Your Credentials</h5>
                     </div>
                     <div class="modal-body">
-                        {% with messages = get_flashed_messages() %}
-                            {% if messages %}
-                                <div class="notification is-danger text-light">
-                                    {{ messages[0] }} and try again. <br><br>
-                                </div>
-                            {% endif %}
-                        {% endwith %}
                         <form action="/driver/login" method="POST">
                             <div class="form-group">
                                 <label for="recipient-name" class="col-form-label">Email-Id</label>
@@ -28,6 +38,11 @@
                                 <input type="password" class="form-control" placeholder="Password" name="password" id="password" required="">
                             </div>
                             <div class="row sub-w3l my-3">
+                                <div class="col sub-agile">
+                                    <input type="checkbox" name="remember" id="brand1" value="True">
+                                    <label for="brand1" class="text-white">
+                                        <span></span>Remember me</label>
+                                </div>
                                 <div class="col sub-agile">
                                     <a href="#" style="color: white;">Forgot Password?</a>
                                 </div>
