Slight changes by sammy

--- a/templates/Driver/master.html
+++ b/templates/Driver/master.html
@@ -48,7 +48,7 @@
 			</div>
 			
 			<div class="col-lg-4 col-md-4 col-sm-6 logo">
-				<a class="navbar-brand" href="/">
+				<a class="navbar-brand" href="/driver/home">
 					<i class="fas fa-taxi"></i> Cammy Cab</a>
 			</div>
 			
@@ -85,7 +85,7 @@
 							<a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
 								aria-expanded="false">
 								<i class="fa fa-lg fa-user"></i>  &nbsp
-								<b>Welcome, {{current_user.first_name}}</b>&nbsp &nbsp
+								<b>Welcome, {{current_user.fname}}</b>&nbsp &nbsp
 								<i class="fa fa-angle-down" style="color: black;" aria-hidden="true"></i>
 							</a>
 							<span class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -156,7 +156,7 @@
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
 					<ul class="navbar-nav mx-auto">
 						<li class="nav-item">
-							<a class="nav-link ml-lg-0" href="/">Home
+							<a class="nav-link ml-lg-0" href="/driver/home">Home
 								<!--span class="sr-only">(current)</span-->
 							</a>
 						</li>
