--- a/templates/Driver/login.html
+++ b/templates/Driver/login.html
@@ -14,7 +14,7 @@
                 <div class="col-lg-6">
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb justify-content-center">
-                        <li class="breadcrumb-item" aria-current="page"><a href="/"> Home </a></li>
+                        <li class="breadcrumb-item" aria-current="page"><a href="/driver/home"> Home </a></li>
                         <li class="breadcrumb-item active" aria-current="page">Driver Login</li>
                         </ol>
                     </nav>
@@ -38,11 +38,6 @@
                                 <input type="password" class="form-control" placeholder="Password" name="password" id="password" required="">
                             </div>
                             <div class="row sub-w3l my-3">
-                                <div class="col sub-agile">
-                                    <input type="checkbox" name="remember" id="brand1" value="True">
-                                    <label for="brand1" class="text-white">
-                                        <span></span>Remember me</label>
-                                </div>
                                 <div class="col sub-agile">
                                     <a href="#" style="color: white;">Forgot Password?</a>
                                 </div>
