--- a/templates/Driver/register.html
+++ b/templates/Driver/register.html
@@ -14,7 +14,7 @@
                 <div class="col-lg-6">
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb justify-content-center">
-                        <li class="breadcrumb-item" aria-current="page"><a href="/"> Home </a></li>
+                        <li class="breadcrumb-item" aria-current="page"><a href="/driver/home"> Home </a></li>
                         <li class="breadcrumb-item active" aria-current="page">Driver Register</li>
                         </ol>
                     </nav>
