--- a/templates/User/login.html
+++ b/templates/User/login.html
@@ -39,11 +39,11 @@
                                 <input type="password" class="form-control" placeholder="Password" name="password" id="password" required="">
                             </div>
                             <div class="row sub-w3l my-3">
-                                <div class="col sub-agile">
+                                <!-- <div class="col sub-agile">
                                     <input type="checkbox" name="remember" id="brand1" value="True">
                                     <label for="brand1" class="text-white">
                                         <span></span>Remember me</label>
-                                </div>
+                                </div> -->
                                 <div class="col sub-agile">
                                     <a href="#" style="color: white;">Forgot Password?</a>
                                 </div>
