--- a/templates/User/login.html
+++ b/templates/User/login.html
@@ -52,7 +52,7 @@
                                 <input type="submit" class="form-control" value="Sign In">
                             </div>
                             <p class="text-center dont-do text-white mt-3">Don't have an account?
-                                <a href="/user/register" style="color: white;">
+                                <a href="/user/register1" style="color: white;">
                                     Register Now</a>
                             </p>
                         </form>
