--- a/templates/User/ridedetails.html
+++ b/templates/User/ridedetails.html
@@ -1,6 +1,16 @@
 {% extends 'user/bookride.html' %}
     {% block content %}
-    <div class="col-lg-9 text-center">
-       <h2>Ride Details</h2>
+    <div class="col-lg-9">
+       <h2 class="border border-warning rounded mt-1 bg-dark text-white text-center" style="padding: 20px;">Ride Details 
+         <span style="float:left" class="fas fa-taxi"></span>
+      </h2>
+         <br>
+      <div class="row">
+         <div class="col-lg-12">
+            <div id ="map" style="height: 680px;">
+               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d30711058.69295036!2d64.4487244350266!3d20.012353286203773!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30635ff06b92b791%3A0xd78c4fa1854213a6!2sIndia!5e0!3m2!1sen!2sin!4v1644571811690!5m2!1sen!2sin" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+             </div>
+         </div>
+      </div>
     </div>
     {% endblock %}
